# docs/swagger.yaml
@@ -29,6 +29,11 @@ definitions:
         example: user_1234
         type: string
     type: object
+  handlers.inputRecovery:
+    properties:
+      email:
+        type: string
+    type: object
 info:
   contact: {}
   description: This is the auth services of course project
@@ -76,6 +81,10 @@ paths:
           description: Token is valid
           schema:
             type: nil
+        "400":
+          description: Invalid token is sent
+          schema:
+            type: nil
         "401":
           description: User is unauthorized
           schema:
@@ -83,6 +92,30 @@ paths:
       security:
       - BearerAuth: []
       summary: Logout user
+      tags:
+      - auth
+  /password/recovery:
+    post:
+      consumes:
+      - application/json
+      description: recover your password by email code
+      parameters:
+      - description: email of the user
+        in: body
+        name: email
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.inputRecovery'
+      responses:
+        "200":
+          description: Token is valid
+          schema:
+            type: nil
+        "400":
+          description: invalid email
+          schema:
+            type: nil
+      summary: Recover password
       tags:
       - auth
   /registration:
